# worldquant-brain-mcp

./: .env.example  .gitignore  LICENSE  README.md  poll_self_corr.py  probe_api.py  pyproject.toml  run_b1_sweep.py  run_c_sweep.py  run_step_a_sweep.py  script.py
.github/agents/: quant-lab.agent.md  quant-scout.agent.md
.github/workflows/: validate.yml
docs/: mcp-roadmap.md  quant-journey.md  research-plan.md
simplified_alpha/: run_signal.py  watchlist.csv
src/worldquant_mcp/: __init__.py  client.py  config.py  expression_ast.py  models.py  server.py
src/worldquant_mcp/data/: experiment_memory.json
src/worldquant_mcp/reference/: __init__.py  clean.py  extract.py  index.py
src/worldquant_mcp/reference/data/: README.md
src/worldquant_mcp/tools/: __init__.py  lab.py  reference.py  research.py  submission.py
